Fix sorting by rate - maxRate nulls treated like zeros